--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,22 +1,34 @@
 TODO: 
     High-Priority:
-        * update regions3.c/regions3_growORTH() to solve linearity constraint, 
-            using non-linear region growing using transformed line priors
-        * detect_outliers.py/detect_outliers() update pca/gmm solution to be 
-            more robust to reduced point sets (eg 0.5 scaling in demo.py/__main__)
-            for faster prototyping 
+        * Debug needed on run_astrometry
+            * speed update during threshold identification
+            * handle errors on MEO/GEO: parameter for source extraction / line features
+        * Test smaller windows for LEO analysis to improve detection and tracking.
+            * Non-linear track association is a longer-term update goal 
     Medium-Priority
-        * sliding window with overlap given large data for import_fits,
-            to prevent memory crashing
-        * create "estimate noise" function to test detection performance under improved markov kernels
+        * Format CCSDS TDM output files
         * ASTRIA-Net pipeline integration (json output)
-        * differentiate spatial and temporal markov kernels,
-            medium-priority due to similarity of results when tested
     Low-Priority
-        * for acceleration when not involving loops to compute markov kernels,
-            compute gradient matrices only once and share across LSD3M
-    
-    
+        * ---
+
+------------------------------------------------------------------
+
+02/17/2022
+    *Version 2: Major revisions 
+    *readme update
+    *general debugging
+    *run_astrometry.py
+        *update to kernel estimation for higher precision astrometry 
+        *update to XY output 
+    *pylib/detect_outlier_agg.py
+        *agglommerative clustering and track association capabilites 
+        *see PyCIS-LSD library for separated code segment
+    *pylib/main_pipe.py and pylib/run_pycis_lsd.py
+        *new pipeline framework for licensing purposes 
+        *frame windowing analysis for handling nonlinear motions and improving runtime
+    *runpycis.py 
+        *higher-level interface for improved accessabiltiy and scripting integration 
+
 ------------------------------------------------------------------
 
 06/07/2021
